<resources>
    <!-- Strings related to the application -->
    <string name="app_name">Hospital</string>

    <!-- Strings related to home activity -->
    <string name="prompt_home">Home</string>
    <string name="menu_home_logout">Logout</string>
    <string name="menu_home_next">Next events:</string>

    <!-- Strings related to login activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_login">"Email or password is wrong!"</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to calendar activity-->
    <string name="error_no_appoint">No events</string>
    <string name="menu_calendar_today">Today</string>

    <!-- String related to new event activity-->
    <string name="prompt_name">Eventname</string>
    <string name="prompt_room">Room</string>
    <string name="prompt_date_from">Date from</string>
    <string name="prompt_hour_from">Hour from</string>
    <string name="prompt_date_to">Date until</string>
    <string name="prompt_hour_to">Hour until</string>
    <string name="prompt_dayevent">Whole Day</string>
    <string name="prompt_notification">Notification</string>
    <string name="prompt_participants">Patient</string>
    <string name="prompt_description">Description</string>
    <string name="error_invalid_eventname">Please enter an event name</string>
    <string name="error_invalid_datepick">You can not set an event for this date</string>
    <string name="error_invalid_room">This room does not exist</string>
    <string name="error_invalid_patient">This patient does not exist</string>
    <string name="menu_newEvent_save">Save</string>
    <string name="error_invalid_dates">"Dates are wrong!"</string>
    <string-array name="arrray_notification">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>


    <!-- String related to show event activitiy-->
    <string name="menu_showEvent_edit">Edit</string>
    <string name="menu_showEvent_delete">Delete</string>

    <string name="title_activity_calender_test">CalenderTest</string>
    <string name="title_activity_show_event">ShowEvent</string>

    <string name="title_activity_database_check">DatabaseCheck</string>


    <!-- Sandro -->
    <string name="nav_patient">Patients</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_pName">Name</string>
    <string name="lbl_bDate">Birthdate</string>
    <string name="lbl_Adress">Adress</string>
    <string name="lbl_Treatment">Treatment</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_lName">Lastname</string>
    <string name="lbl_fName">Firstname</string>
    <string name="lbl_City">City</string>
    <string name="lbl_AHV_Number">AHV Number:</string>
    <string name="lbl_cRoom">Current Room:</string>
    <string name="addPatient">Add Patient</string>
    <string name="addThreatment">Add Threatment</string>
    <string name="lbl_Title">Title</string>
    <string name="lbl_tDescription">Description</string>
    <string name="save">Save</string>
    <string name="lbl_Doc">Responsible Doctor</string>
    <string name="lbl_Room">Room</string>
    <string name="title_activity_patientlist">PatientlistActivity</string>
    <string name="title_activity_add_patient">AddPatientActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_invalid_treatment">Please enter a valid treatment</string>

    <string-array name="array_gender">
        <item>male</item>
        <item>female</item>

    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>