<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewEvent">

    <ScrollView
        android:id="@+id/newEvent_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main Layout -->

        <LinearLayout
            android:id="@+id/newEvent_overview_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/newEvent_editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:imeActionId="@+id/event_name"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- Room layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/newEvent_editText_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_room"
                        android:imeActionId="@+id/event_room"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newEvent_button_room"
                    android:text="add"
                    android:clickable="true" />
            </LinearLayout>

            <!-- From layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <Button
                        android:id="@+id/newEvent_button_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_date_from"
                        android:onClick="showStartDateDialog"
                        style="?android:attr/spinnerStyle"/>

                    <Button
                        android:id="@+id/newEvent_button_from_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="showStartTimeDialog"
                        android:text="@string/prompt_hour_from"
                        style="?android:attr/spinnerStyle"/>
            </LinearLayout>

            <!-- To layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <Button
                        android:id="@+id/newEvent_editText_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_date_to"
                        android:onClick="showStartDateDialog"
                        style="?android:attr/spinnerStyle"/>

                    <Button
                        android:id="@+id/newEvent_button_to_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_hour_to"
                        android:onClick="showStartTimeDialog"
                        style="?android:attr/spinnerStyle"/>

            </LinearLayout>

            <!-- Checkbox Whole Day-->
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_dayevent"
                android:id="@+id/newEvent_checkBox_dayevent"
                android:layout_marginBottom="5dp" />

            <!-- Spinner Notification-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newEvent_textView_notification"
                android:text="@string/prompt_notification"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newEvent_spinner_notification"
                android:entries="@array/arrray_notification"
                android:prompt="@string/prompt_notification"
                android:layout_marginBottom="5dp">
            </Spinner>

            <!-- Participants Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/newEvent_editText_part"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_participants"
                    android:imeActionId="@+id/event_part"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newEvent_button_part"
                android:text="add"
                android:clickable="true" />
        </LinearLayout>

            <!-- Description -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/newEvent_editText_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description"
                    android:imeActionId="@+id/event_desc"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>




