<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/tab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/android"
            android:cropToPadding="false"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:useDefaultMargins="true"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pName"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bDate"
            android:id="@+id/textView3"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Birthdate"
            android:id="@+id/textView4"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Adress"
            android:id="@+id/textView5"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Adress"
            android:id="@+id/textView6"
            android:layout_row="2"
            android:layout_column="1" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="City"
            android:id="@+id/textView8"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_AHV_Number"
            android:id="@+id/textView9"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="AHV Nr."
            android:id="@+id/textView10"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Room"
            android:id="@+id/textView11"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Room Nr."
            android:id="@+id/textView12"
            android:layout_row="5"
            android:layout_column="1" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPatient"
            android:id="@+id/button"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
