<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/tab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:weightSum="1">


            <!-- Treatment layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/ph_treat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_Treatment"
                        android:imeActionId="@+id/act_history_treat"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ph_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_tDescription"
                    android:imeActionId="@+id/tDesc"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:lines="5"
                    android:maxLines="10" />

            </android.support.design.widget.TextInputLayout>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From: "
                android:id="@+id/textView"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/ph_datefrom"
                />


            <!-- Doctor layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/ph_doc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_Doc"
                        android:imeActionId="@+id/act_history_doc"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete"
                        android:editable="false" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>






        </LinearLayout>
    </ScrollView>


</LinearLayout>
